# traders_diary

./: .gitignore  Makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
tradi/accounting/: admin.py  validators.py
tradi/accounting/migrations/: 0001_initial.py  0002_financialasset_unique_asset_tradingpair_unique_pair.py  0003_alter_financialasset_market_and_more.py
tradi/accounting/models/: finances.py
tradi/bybit/: admin.py  connections.py  constants.py  tasks.py
tradi/bybit/migrations/: 0001_initial.py
tradi/bybit/models/: __init__.py  market.py
tradi/bybit/services/celery/: __init__.py  current_usdt_linear_instruments_getter.py  one_hour_klienes_getter.py
tradi/core/: models.py  services.py
tradi/core/services/: base.py  interfaces.py
tradi/tradi/: __init__.py  celery.py  logging_handlers.py  settings.py
